# zada

./: .gitignore  .npmignore  README.md  package.json  pyproject.toml
scripts/: postinstall.js
zada/: __init__.py  antigravity_credits.py  antigravity_login.py  cli.py  dashboard.py  gmail_login.py  list_accounts.py  open_profile.py  paths.py
zada/static/: app.js  pet.css
zada/templates/: index.html
